--- a/ezra-project w3/styles.css
+++ b/ezra-project w3/styles.css
@@ -8,11 +8,44 @@ body {
     background-repeat: no-repeat;
     min-height: 100vh; /* גובה מינימלי של המסך */
     position: relative;
+
 }
 
 .layout-container {
     padding: 20px;
     height: 100%; /* מאפשר לגובה להיות יחסי לאב */
+    .left-sidebar1 {
+        position: absolute;
+        transform: translateY(-30%);
+        display: flex;
+        flex-direction: column;
+        align-items: initial;
+        border-right: 1px solid #ccc; /* קו הפרדה */
+        background-color: rgb(214, 214, 244);
+        color: #333;
+        border: 1px solid #ccc;
+        padding: 8px 16px; /* פחות ריפוד */
+        font-size: 14px; /* גודל פונט קטן יותר */
+        cursor: pointer;
+        border-radius: 5px;
+        z-index: 11;
+    }
+    .left-sidebar2 {
+        position: absolute;
+        transform: translateY(50%);
+        display: flex;
+        flex-direction: column;
+        align-items: initial;
+        border-right: 1px solid #ccc; /* קו הפרדה */
+        background-color: rgb(243, 235, 124);
+        color: #333;
+        border: 1px solid #ccc;
+        padding: 8px 16px; /* פחות ריפוד */
+        font-size: 14px; /* גודל פונט קטן יותר */
+        cursor: pointer;
+        border-radius: 5px;
+        z-index: 11;
+    }
 }
 
 .layout-title {
@@ -58,6 +91,8 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
+
+    
 }
 
 .country-item {
